adding modification end adding cryptografy

--- a/backEnd/src/pages/cadastro/cadastro.html
+++ b/backEnd/src/pages/cadastro/cadastro.html
@@ -33,15 +33,15 @@
 
         </form>
         <button type="submit" id="submit">Cadastre-se</button>
-        <span><a href="#">Já possui cadastro? Acesse aqui </a></span>
+        <span><a href="../login/login.html">Já possui cadastro? Acesse aqui </a></span>
     </section>
 
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href="#"> Home </a></li>
-                <li><a href="#"> Livros </a></li>
-                <li><a href="#"> Login </a></li>
+                <li><a href="../home/home.html"> Home </a></li>
+                <li><a href="../home/home.html"> Livros </a></li>
+                <li><a href="../login/login.html"> Login </a></li>
             </ul>
         </nav>
         <img src="../img/login_book.svg" alt="">
