--- a/backEnd/src/pages/login/login.html
+++ b/backEnd/src/pages/login/login.html
@@ -22,18 +22,17 @@
             </label>
         </form>
         <button type="submit" id="logar">Faça login</button>
-        <span><a href="#">Ainda não possui cadastro? Cadastre-se agora </a></span>
+        <span><a href="../cadastro/cadastro.html">Ainda não possui cadastro? Cadastre-se agora </a></span>
     </section>
 
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href="http://"> Home </a></li>
-                <li><a href="http://"> Livros </a></li>
-                <li><a href="http://"> Cadastre-se </a></li>
+                <li><a href="../home/home.html"> Home </a></li>
+                <li><a href="../home/home.html"> Livros </a></li>
+                <li><a href=" ../cadastro/cadastro.html"> Cadastre-se </a> </li>
             </ul>
-        </nav>
-        <img src="../img/login_book.svg" alt="">
+        </nav> <img src="../img/login_book.svg" alt="">
     </section>
     <script src="./script.js"></script>
 </body>
