adding book details and map location

--- a/backEnd/src/pages/book_register/book_register.html
+++ b/backEnd/src/pages/book_register/book_register.html
@@ -52,6 +52,10 @@
           <input type="text" placeholder="" id="author" />
           <p>Autor</p>
         </label>
+        <label>
+          <input type="text" placeholder="" id="nameContact" />
+          <p>Nome para contato</p>
+        </label>
 
         <label>
           <input type="tel" placeholder="" id="contact" />
