--- a/backEnd/src/pages/home/home.html
+++ b/backEnd/src/pages/home/home.html
@@ -8,18 +8,18 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="home-loaderd">
     <section class="nav-menu">
         <div class="logo">
             <img src="../img/logo.svg" alt="">
         </div>
         <nav class="nav-menu-pages">
             <ul>
-                <li><a href="#"> Home </a>
+                <li><a href="../home/home.html"> Home </a>
                     <div class="linha"></div>
                 </li>
                 <li><a href="#"> Livros </a></li>
-                <li><a href="#"> Perfil </a></li>
+                <li><a href="../book_register/book_register.html"> Perfil </a></li>
                 <li><a href="#"> Contato </a></li>
             </ul>
 
@@ -37,8 +37,11 @@
     </div>
     <section class="livros">
 
-    </section>
+        </div>
 
+    </section>
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=&v=weekly" async></script>
     <script src="./script.js"></script>
 </body>
 
