--- a/backEnd/src/pages/home/home.html
+++ b/backEnd/src/pages/home/home.html
@@ -19,7 +19,7 @@
                     <div class="linha"></div>
                 </li>
                 <li><a href="#"> Livros </a></li>
-                <li><a href="../book_register/book_register.html"> Perfil </a></li>
+                <li><a href="../profile/profile.html"> Perfil </a></li>
                 <li><a href="#"> Contato </a></li>
             </ul>
 
