--- a/backEnd/src/pages/profile/profile.html
+++ b/backEnd/src/pages/profile/profile.html
@@ -54,11 +54,12 @@
 
     <div id="email">
         <form action=" " method="get">
-        <input type="email" placeholder="Digite o email" id="emailUser"> 
-    </form>
-    <button>Confirmar</button>
+            <input type="email" placeholder="Digite o email" id="emailUser">
+        </form>
+        <button id="buttonEmail" type="submit">Confirmar</button>
+
     </div>
-    
+    <button id="buttonConf" type="submit">Estou certo disso!</button>
 
     <section class="livros">
 
