page profile changes

--- a/backEnd/src/pages/profile/profile.html
+++ b/backEnd/src/pages/profile/profile.html
@@ -14,11 +14,11 @@
         </div>
         <nav class="nav-menu-pages">
             <ul>
-                <li><a href="#"> Home </a>
+                <li><a href="../home/home.html"> Home </a></li>
+                <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
+                <li><a href="../profile/profile.html"> Perfil </a>
                     <div class="linha"></div>
                 </li>
-                <li><a href="#"> Livros </a></li>
-                <li><a href="#"> Perfil </a></li>
                 <li><a href="#"> Contato </a></li>
             </ul>
 
@@ -34,10 +34,9 @@
     <section class="card-all">
 
         <div class="card">
+            
             <div class="data-user">
-                <div>Nome</div>
-                <div>Email</div>
-                <div>Telefone</div>
+               
             </div>
 
 
@@ -49,23 +48,6 @@
         </div>
 
     </section>
-
-    <h2>Clique no livro que deseja emprestar, em seguida insira o email do destinatário</h2>
-
-    <div id="email">
-        <form action=" " method="get">
-            <input type="email" placeholder="Digite o email" id="emailUser">
-        </form>
-        <button id="buttonEmail" type="submit">Confirmar</button>
-
-    </div>
-    <button id="buttonConf" type="submit">Estou certo disso!</button>
-
-    <section class="livros">
-
-    </section>
-
-
 
     <script src="./script.js"></script>
 
