--- a/backEnd/src/pages/home/home.html
+++ b/backEnd/src/pages/home/home.html
@@ -18,9 +18,8 @@
                 <li><a href="../home/home.html"> Home </a>
                     <div class="linha"></div>
                 </li>
-                <li><a href="#"> Livros </a></li>
+                <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
                 <li><a href="../profile/profile.html"> Perfil </a></li>
-                <li><a href="#"> Contato </a></li>
             </ul>
 
         </nav>
@@ -30,6 +29,7 @@
                 <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
                 </label>
             </form>
+        </nav>
     </section>
     <div class="page-titulo">
         <h1>Temos os seguintes livros!</h1>
