--- a/backEnd/src/pages/mybooks/mybooks.html
+++ b/backEnd/src/pages/mybooks/mybooks.html
@@ -21,9 +21,7 @@
                     <div class="linha"></div>
                 </li>
                 <li><a href="../profile/profile.html"> Perfil </a></li>
-                <li><a href="#"> Contato </a></li>
             </ul>
-
         </nav>
 
         <nav class="nav-pesquisa">
@@ -31,6 +29,7 @@
                 <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
                 </label>
             </form>
+        </nav>
     </section>
 
     <section>
