--- a/backEnd/src/pages/profile/profile.html
+++ b/backEnd/src/pages/profile/profile.html
@@ -19,7 +19,6 @@
                 <li><a href="../profile/profile.html"> Perfil </a>
                     <div class="linha"></div>
                 </li>
-                <li><a href="#"> Contato </a></li>
             </ul>
 
         </nav>
@@ -29,6 +28,7 @@
                 <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
                 </label>
             </form>
+        </nav>
     </section>
 
     <section class="card-all">
@@ -39,10 +39,9 @@
                
             </div>
 
-
             <div class="btn">
-                <button>Editar Perfil</button>
-                <button>Cadastar Livros</button>
+                <a href="../book_register/book_register.html">Cadastar Livros</a>
+                
             </div>
 
         </div>
