--- a/backEnd/src/pages/book_register/book_register.html
+++ b/backEnd/src/pages/book_register/book_register.html
@@ -15,12 +15,11 @@
     </div>
     <nav class="nav-menu-pages">
       <ul>
-        <li><a href="#"> Home </a>
+        <li><a href="../home/home.html"> Home </a>
           <div class="linha"></div>
         </li>
-        <li><a href="#"> Livros </a></li>
-        <li><a href="#"> Perfil </a></li>
-        <li><a href="#"> Contato </a></li>
+        <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
+        <li><a href="../profile/profile.html"> Perfil </a></li>
       </ul>
 
     </nav>
@@ -30,6 +29,7 @@
         <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
         </label>
       </form>
+    </nav>
 
   </section>
 
