modifying the navigation

--- a/backEnd/src/pages/login/login.html
+++ b/backEnd/src/pages/login/login.html
@@ -28,9 +28,8 @@
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href="../home/home.html"> Home </a></li>
-                <li><a href="../home/home.html"> Livros </a></li>
-                <li><a href=" ../cadastro/cadastro.html"> Cadastre-se </a> </li>
+                <li><a href=" ../cadastro/cadastro.html"> Ainda não possui um <strong>cadastro</strong>?<br> Faça parte
+                        dessa família, você tambem! </a> </li>
             </ul>
         </nav> <img src="../img/login_book.svg" alt="">
     </section>
