--- a/backEnd/src/pages/cadastro/cadastro.html
+++ b/backEnd/src/pages/cadastro/cadastro.html
@@ -39,9 +39,9 @@
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href="../home/home.html"> Home </a></li>
-                <li><a href="../home/home.html"> Livros </a></li>
-                <li><a href="../login/login.html"> Login </a></li>
+                <li><a href="../login/login.html">Faça seu <strong>Login</strong> e tenha a possibilidade de ler livros
+                        incríveis </a>
+                </li>
             </ul>
         </nav>
         <img src="../img/login_book.svg" alt="">
