--- a/backEnd/src/pages/mybooks/mybooks.html
+++ b/backEnd/src/pages/mybooks/mybooks.html
@@ -32,7 +32,11 @@
         </nav>
     </section>
 
-    <section>
+    <section class="header-mybooks">
+        <div class="btn">
+            <a href="../book_register/book_register.html">Cadastrar Livros</a>
+
+        </div>
         <div class="page-myBooks">
             <h2>Clique no livro que deseja emprestar, em seguida insira o email do destinatário</h2>
 
