--- a/backEnd/src/pages/profile/profile.html
+++ b/backEnd/src/pages/profile/profile.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="btn">
-                <a href="../book_register/book_register.html">Cadastar Livros</a>
+                <a href="../book_register/book_register.html">Cadastrar Livros</a>
 
             </div>
 
