--- a/backEnd/src/pages/mybooks/mybooks.html
+++ b/backEnd/src/pages/mybooks/mybooks.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Meus Livros</title>
+    <title>My Books</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" href="./style/style.css" />
 </head>
@@ -61,12 +61,12 @@
         </div>
 
         </div>
-        <div class="myLoan">
+        <div class="my-loan">
             <section class="id-devolution"></section>
             <button class="button-devolution"></button>
         </div>
 
-        <section class="livros">
+        <section class="books">
         </section>
 
     </section>
