--- a/backEnd/src/pages/profile/profile.html
+++ b/backEnd/src/pages/profile/profile.html
@@ -17,14 +17,14 @@
                 <li><a href="../home/home.html"> Home </a></li>
                 <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
                 <li><a href="../profile/profile.html"> Perfil </a>
-                    <div class="linha"></div>
+                    <div class="line"></div>
                 </li>
                 <li><a href="../login/login.html" onclick="exit()">Sair</a></li>
             </ul>
 
         </nav>
 
-        <nav class="nav-pesquisa">
+        <nav class="nav-search">
             <form action=" " method="get">
                 <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
                 </label>
