--- a/backEnd/src/pages/book_register/book_register.html
+++ b/backEnd/src/pages/book_register/book_register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <title>Cadstro de Livros</title>
@@ -16,7 +16,7 @@
     <nav class="nav-menu-pages">
       <ul>
         <li><a href="../home/home.html"> Home </a>
-          <div class="linha"></div>
+          <div class="line"></div>
         </li>
         <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
         <li><a href="../profile/profile.html"> Perfil </a></li>
@@ -24,7 +24,7 @@
 
     </nav>
 
-    <nav class="nav-pesquisa">
+    <nav class="nav-search">
       <form action=" " method="get">
         <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
         </label>
