--- a/backEnd/src/pages/home/home.html
+++ b/backEnd/src/pages/home/home.html
@@ -16,7 +16,7 @@
         <nav class="nav-menu-pages">
             <ul>
                 <li><a href="../home/home.html"> Home </a>
-                    <div class="linha"></div>
+                    <div class="line"></div>
                 </li>
                 <li><a href="../mybooks/mybooks.html"> Meus Livros </a></li>
                 <li><a href="../profile/profile.html"> Perfil </a></li>
@@ -24,18 +24,18 @@
 
         </nav>
 
-        <nav class="nav-pesquisa">
+        <nav class="nav-search">
             <form action=" " method="get">
                 <input type="search" placeholder="Buscar" id="busca"> <img src="../img/lupa.png" alt="">
                 </label>
             </form>
         </nav>
     </section>
-    <div class="page-titulo">
+    <div class="page-title">
         <h1>Temos os seguintes livros!</h1>
         <p>clique na imagem para ver mais detalhes</p>
     </div>
-    <section class="livros">
+    <section class="books">
 
 
     </section>
