--- a/backEnd/src/pages/login/login.html
+++ b/backEnd/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -21,14 +21,14 @@
                 <p>Senha</p>
             </label>
         </form>
-        <button type="submit" id="logar">Faça login</button>
-        <span><a href="../cadastro/cadastro.html">Ainda não possui cadastro? Cadastre-se agora </a></span>
+        <button type="submit" id="log">Faça login</button>
+        <span><a href="../registerUser/registerUser.html">Ainda não possui cadastro? Cadastre-se agora </a></span>
     </section>
 
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href=" ../cadastro/cadastro.html"> Ainda não possui um <strong>cadastro</strong>?<br> Faça parte
+                <li><a href="../registerUser/registerUser.html"> Ainda não possui um <strong>cadastro</strong>?<br> Faça parte
                         dessa família, você tambem! </a> </li>
             </ul>
         </nav> <img src="../img/login_book.svg" alt="">
