--- a/backEnd/src/pages/registerUser/registerUser.html
+++ b/backEnd/src/pages/registerUser/registerUser.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/cadastro.css">
-    <title>Cadastro</title>
+    <link rel="stylesheet" href="./styles/registerUser.css">
+    <title>Register User</title>
 </head>
 
 <body>
