adding system test

--- a/backEnd/src/pages/registerUser/registerUser.html
+++ b/backEnd/src/pages/registerUser/registerUser.html
@@ -39,7 +39,8 @@
     <section class="nav-login">
         <nav class="nav-menu-login">
             <ul>
-                <li><a href="../login/login.html">Faça seu <strong>Login</strong> e tenha a possibilidade de ler livros
+                <li><a href="../login/login.html" id="login">Faça seu <strong>Login</strong> e tenha a possibilidade de
+                        ler livros
                         incríveis </a>
                 </li>
             </ul>
